@@ -67,6 +67,7 @@
         <module>ddd4j-boot-bom</module>
         <module>ddd4j-boot-dependencies</module>
         <module>ddd4j-boot-cache</module>
+        <module>ddd4j-boot-web</module>
         <!-- 领域聚合（对齐 ddd4j 库） -->
         <module>ddd4j-boot-data</module>
         <module>ddd4j-boot-auth</module>
@@ -361,10 +362,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
                     <configuration>
-                        <!-- 跳过单元测试 -->
-                        <skip>true</skip>
-                        <skipTests>true</skipTests>
-                        <argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m -Dfile.encoding=UTF-8</argLine>
+                        <argLine>-Xmx1024m -Dfile.encoding=UTF-8</argLine>
                         <additionalClasspathElements>
                             <additionalClasspathElement>${basedir}/target/test-classes</additionalClasspathElement>
                         </additionalClasspathElements>
